# 2021-Avionics

./: .gitignore  .gitmodules  README.md
Firmware/: CMakeLists.txt  build.sh  main.c
Firmware/include/: crc.h  imu.h  log.h  motor.h  pid.h  sd.h
Firmware/pff/: CMakeLists.txt
Firmware/src/: crc.c  diskio.c  imu.c  log.c  main.c  motor.c  pid.c  sd.c
Hardware/: Avionics.kicad_pcb  Avionics.kicad_prl  Avionics.kicad_pro  Avionics.kicad_sch  fp-lib-table  sym-lib-table
Hardware/modules/DX07S016JA1R1500.pretty/: DX07S016JA1R1500.kicad_mod
Hardware/modules/L298P.pretty/: L298P.kicad_mod  L298P.step
Hardware/modules/RP2040.pretty/: RP2040-QFN-56.kicad_mod
Hardware/modules/SK6812B.pretty/: SK6812B_Side.kicad_mod
Hardware/modules/Silkscreen.pretty/: AIAA.kicad_mod  MSOE.kicad_mod  Qwiic.kicad_mod  Starfield 1.kicad_mod  Starfield 2.kicad_mod  Starfield 3.kicad_mod  Starfield 4.kicad_mod  WSGC.kicad_mod
Hardware/modules/XT60PW-M.pretty/: AMASS_XT60PW-M.kicad_mod
